# stocks

./: pyproject.toml
notebooks/: crawler.ipynb  yfinance_msft.cache
scripts/: crawler.py
src/services/cronjobs/: stocks.py
