[tool.poetry]
name = "stocks"
version = "0.1.0"
description = ""
authors = ["Antoine Prieur <antoine.prieur45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
yfinance = {extras = ["nospam"], version = "^0.2.38"}
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
